simplify HTML setup and consolidate down to 5 steps instead of 6.

--- a/step-3/style.css
+++ b/step-3/style.css
@@ -65,3 +65,17 @@ body {
 .card .back-view img {
   max-width: 45px;
 }
+
+/** **/
+.card .back-view {
+  transform: rotateY(-180deg);
+}
+
+.card.flip .back-view {
+  transform: rotateY(0);
+}
+
+.card.flip .front-view {
+  transform: rotateY(180deg);
+}
+/** **/
